Modules/_pickle.c
@@ -2958,7 +2958,8 @@ load_float(UnpicklerObject *self)
     errno = 0;
     d = PyOS_ascii_strtod(s, &endptr);
 
-    if (errno || (endptr[0] != '\n') || (endptr[1] != '\0')) {
+    if ((errno == ERANGE && !(fabs(d) <= 1.0)) ||
+        (endptr[0] != '\n') || (endptr[1] != '\0')) {
         PyErr_SetString(PyExc_ValueError, "could not convert string to float");
         return -1;
     }
